--- a/Flights/pom.xml
+++ b/Flights/pom.xml
@@ -22,8 +22,8 @@
         <fabric8.maven.plugin.version>3.5.30</fabric8.maven.plugin.version>
         <fabric8.resources.requests.memory>64Mi</fabric8.resources.requests.memory>
         <fabric8.generator.from>registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift</fabric8.generator.from>
-        <spring-boot.bom.version>1.5.8.Final-redhat-1</spring-boot.bom.version>
-        <springboot.version>1.5.8.RELEASE</springboot.version>
+        <spring-boot.bom.version>1.5.10.SP1</spring-boot.bom.version>
+        <springboot.version>1.5.10.RELEASE</springboot.version>
     </properties>
 
     <dependencyManagement>
@@ -65,7 +65,7 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-ribbon</artifactId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>
 
         <dependency>
@@ -81,6 +81,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+		
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-jwt</artifactId>
+		</dependency>
+		 
+		
 
         <!-- Tomcat -->
         <dependency>
