--- a/Presentation/src/main/resources/application.yml
+++ b/Presentation/src/main/resources/application.yml
@@ -38,8 +38,8 @@ security:
   - "bower.json"
   oauth2:
     client:
-      accessTokenUri: http://authserver/oauth/token
-      userAuthorizationUri: http://authserver/oauth/authorize
+      accessTokenUri: http://authserver-lambdaair.b9ad.pro-us-east-1.openshiftapps.com/oauth/token
+      userAuthorizationUri: http://authserver-lambdaair.b9ad.pro-us-east-1.openshiftapps.com/oauth/authorize
       clientId: acme
       clientSecret: acmesecret
     resource:
